--- a/foundations/01-css-methods/01.css
+++ b/foundations/01-css-methods/01.css
@@ -2,6 +2,6 @@ div {
     color: white;
     background-color: red;
     font-size: 32px;
-    align-items: center;
+    text-align: center;
     font-weight: bold;
 }
