--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -2,12 +2,16 @@
     background-color: pink;
 }
 
-#2{
+#two{
     color: blue;
     font-size: 36px;
 }
 
-#4{
+#three{
+    font-size: 24px;
+}
+
+#four{
     background-color: lightgreen;
     font-size: 24px;
     font: bold;
