--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -1,5 +1,6 @@
 .odd-number{
     background-color: pink;
+    font: Verdana;
 }
 
 #two{
@@ -14,5 +15,5 @@
 #four{
     background-color: lightgreen;
     font-size: 24px;
-    font: bold;
+    font-weight: bold;
 }
