--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -23,11 +23,11 @@ body {
   font-size: 20px;
 }
 
-/* div.text {
+div.text {
   color: rgb(0, 0, 0);
   font-size: 22px;
   font-weight: 100;
-} */
+}
 
 .confirm {
   background: green;
@@ -36,7 +36,7 @@ body {
 } 
 
 
-.child {
+.div.text.child {
   color: rgb(0, 0, 0);
   font-weight: 800;
   font-size: 14px;
