--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -5,12 +5,13 @@ body {
 
 .card {
   width: 400px;
-  background: #fff;
+  background: black;
   margin: 32px auto;
 }
 
 .title {
   background: #e3f4ff;
+  margin-top: 30px;
   margin: 30px;
 }
 
