--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -5,7 +5,7 @@ body {
 
 .card {
   width: 400px;
-  background: black;
+  background: white;
   margin: 32px auto;
 }
 
@@ -25,4 +25,5 @@ body {
 button {
   background: white;
   border: 1px solid #eee;
+  display: block;
 }
