--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -16,7 +16,7 @@ body {
 
 .content {
   background: #e3f4ff;
-}d
+}
 
 .button-container {
   background: #e3f4ff;
@@ -25,6 +25,4 @@ body {
 button {
   background: white;
   border: 1px solid #eee;
-  display: block;
-  
 }
