--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -6,8 +6,8 @@ body {
 .card {
   width: 400px;
   background: white;
-  margin: 0 auto;
-  padding: 8px;
+  margin: 16px auto;
+  padding: 35px;
 }
 
 .title {
