--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -7,12 +7,13 @@ body {
   width: 400px;
   background: white;
   margin: 16px auto;
-  padding: 35px;
+  padding: 8px;
 }
 
 .title {
   background: #e3f4ff;
   margin: 30px;
+  width: 400px;
 }
 
 .content {
