--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -7,6 +7,9 @@ body {
   width: 400px;
   background: white;
   margin: 16px auto;
+  margin-top: 0;
+  margin-bottom: 8px;
+  font-size: 16px;
   padding: 8px;
 }
 
