--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -25,11 +25,12 @@ body {
 .content {
   background: #e3f4ff;
   margin: 8px;
-  border: 10px;
+  padding: 10px;
 }
 
 .button-container {
   background: #e3f4ff;
+  display: block;
 }
 
 button {
