--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -15,6 +15,7 @@ body {
 
 .title {
   background: #e3f4ff;
+  width:450; 
   margin: 16px;
   margin-top: 0;
   margin-bottom: 8px;
@@ -37,5 +38,7 @@ button {
   background: white;
   border: 1px solid #eee;
   display:block;
+  text-align: center;
+  padding-bottom: 8px;
   
 }
