--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -15,8 +15,6 @@ body {
 
 .title {
   background: #e3f4ff;
-  width:500px; 
-  margin: 16px;
   margin-top: 0;
   margin-bottom: 8px;
   font-size: 16px;
@@ -39,7 +37,8 @@ button {
   border: 1px solid #eee;
   display:block;
   margin: 0 auto;
-  border-bottom: 8px;
+  padding: 24px 8px;
+  
   
   
 }
