--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -12,11 +12,13 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  display:flex; 
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display:flex; 
 }
 
 a {
@@ -25,4 +27,5 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+  display:flex; 
 }
