--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -2,6 +2,7 @@
   font-family: monospace;
   background: papayawhip;
   display:flex; 
+  justify-items: center;
 
 
 }
@@ -19,6 +20,7 @@ ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
   display:flex; 
+  gap: 8px;
 }
 
 a {
