--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -4,7 +4,6 @@
   display:flex; 
   justify-content: center;
   align-content: center;
-  gap: 15px;
 
 
 }
@@ -16,6 +15,8 @@
   background: white;
   padding: 4px 32px;
   display:flex; 
+  border: 10px solid papayawhip;
+  gap: 15px;
 }
 
 ul {
