--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -14,7 +14,7 @@ body {
   box-shadow: 0 0 8px rgba(0,0,0,.1);
   display:flex; 
   align-items: center;
-  justify-content: space-between;
+  
 }
 
 .profile-image {
@@ -30,6 +30,7 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  align-items:flex-start;
 }
 
 button {
