--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -30,7 +30,7 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
-  align-items:flex-start;
+  justify-content: flex-start;
 }
 
 button {
@@ -39,7 +39,7 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
-  align-items: flex-end;
+  justify-items: flex-end;
 }
 
 a {
