--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -39,7 +39,7 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
-  justify-items: flex-end;
+  justify-content: flex-end;
 }
 
 a {
