--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -30,7 +30,7 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
-  justify-content: flex-start;
+  justify-content: flex-end;
 }
 
 button {
