--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -31,7 +31,7 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
-  justify-self:  start-end;
+  justify-items:  start-end;
 }
 
 button {
