--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -40,6 +40,7 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  display: flex;
   justify-content: flex-end;
 }
 
@@ -47,7 +48,7 @@ a {
   /* this removes the line under our links */
   text-decoration: none;
   color: rebeccapurple;
-  flex-basis: 100px;
+  
 }
 
 ul {
