--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -16,6 +16,7 @@ body {
   display:flex; 
   justify-content: space-between;
   align-items: center;
+  padding: 8px;
   
 }
 
@@ -25,8 +26,7 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
-  display: flex;
-  justify-content: flex-end;
+  
 }
 
 .logo {
@@ -34,7 +34,7 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
-  justify-content:  start-end;
+
 }
 
 button {
@@ -55,4 +55,7 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  padding: 0;
+  margin: 0;
 }
