--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -58,8 +58,10 @@ ul {
   display: flex;
   padding: 0;
   margin: 0;
+  gap: 8px;
 }
 .left, .right{
   display :flex;
   align-items: center;
+  gap: 8px;
 }
