--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -2,9 +2,11 @@ body {
   font-family: 'Courier New', Courier, monospace;
 }
 
-img {
+.images{
   width: 100px;
   height: 100px;
+  display: flex;
+  justify-content: center;
 }
 
 .title {
