--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -2,11 +2,9 @@ body {
   font-family: 'Courier New', Courier, monospace;
 }
 
-.images{
+.container{
   display: flex;
   justify-content: center;
-  height:20px;
-  width: 20px;
 }
 
 .title {
