--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -4,7 +4,8 @@ body {
 
 .container{
   display: flex;
-  justify-content: center;
+  justify-content:space-between;
+  align-items: center;
 }
 .image{
   height: 20px;
