--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -14,6 +14,9 @@ img {
   display: flex;
   justify-content: center;
 }
+.container{
+  display: flex;
+}
 
 /* do not edit this footer */
 .footer {
