--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -16,12 +16,12 @@ img {
 }
 .container{
   display: flex;
-  flex: 1;
+  justify-content: center;
 
 }
 
 .image{
-  flex: 1;
+  
 }
 
 /* do not edit this footer */
