--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,7 +1,5 @@
 body {
   font-family: 'Courier New', Courier, monospace;
-  text-align: center;
-  
 }
 
 img {
@@ -12,17 +10,6 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
-  margin-bottom: 32px;
-  
-}
-.container{
-  display: flex;
-  justify-content: center;
-  gap: 52px;
-}
-
-.image{
-  max-width: 200px;
 }
 
 /* do not edit this footer */
@@ -36,4 +23,24 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+/* SOLUTION */
+
+body {
+  text-align: center;
+}
+
+.title {
+  margin-bottom: 32px;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+}
+
+.info {
+  max-width: 200px;
 }
