--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -21,6 +21,9 @@ body {
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
 }
+.title{
+  justify-content: space-around;
+}
 
 
 .icon {
