--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -41,6 +41,10 @@ body {
   justify-content: center;
 }
 
+.header{
+  font-weight: bold;
+}
+
 .close-button {
   background: #eee;
   border-radius: 50%;
