--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -48,6 +48,11 @@ body {
   font-size: 25px;
 }
 
+.text{
+  margin-left: 16px;
+  margin-right: 16px;
+}
+
 .close-button {
   background: #eee;
   border-radius: 50%;
