--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -49,8 +49,8 @@ body {
 }
 
 .text{
-  margin-left: 40px;
-  margin-right: 40px;
+  margin-left: 50px;
+  margin-right: 50px;
 }
 
 .close-button {
@@ -66,6 +66,11 @@ body {
   justify-content: center;
   border: 1px solid #eee;
   padding: 0;
+}
+
+.buttons{
+  margin-bottom: 8px;
+  margin-left: 50px;
 }
 
 button {
