--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -13,9 +13,11 @@ body {
 
 .left-links{
   display: flex;
+  justify-content: space-around;
 }
 .right-links{
   display: flex;
+  justify-content: space-around;
 }
 
 img {
