--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -13,11 +13,11 @@ body {
 
 .left-links{
   display: flex;
-  justify-content: space-around;
+  gap: 8px;
 }
 .right-links{
   display: flex;
-  justify-content: space-around;
+  
 }
 
 img {
