--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -11,6 +11,8 @@ body {
   display: flex;
   justify-content: space-between;
   margin: 8px;
+  text-decoration: none;
+  color: #ddd;
 }
 
 .left-links{
