--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -13,6 +13,11 @@ body {
   margin: 8px;
 }
 
+.footer{
+  display: flex;
+  justify-content: space-between;
+}
+
 .left-links{
   display: flex;
   gap: 24px;
@@ -20,8 +25,7 @@ body {
 .right-links{
   display: flex;
   gap: 24px;
-  justify-content: flex-end;
-  
+  justify-content: flex-end; 
 }
 
 img {
