--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -15,7 +15,7 @@ body {
 .footer{
   display: flex;
   justify-content: space-between;
-  align-items: baseline;
+  align-items: last baseline;
 }
 
 .left-links{
