--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -32,13 +32,16 @@ body {
 
 img {
   width: 600px;
-}
-
-.content{
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
+/* .content{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+} */
 
 button {
   font-family: Roboto, sans-serif;
