--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -36,11 +36,11 @@ img {
   
 }
 
-/* .content{
+.content{
   display: flex;
   justify-content: center;
   align-items: center;
-} */
+}
 
 button {
   font-family: Roboto, sans-serif;
