--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -10,6 +10,11 @@ body {
   color: white;
 }
 
+.column{
+  display: flex;
+  flex-direction: column;
+}
+
 .footer {
   height: 72px;
   background: #eee;
