--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -12,7 +12,7 @@ body {
   color: white;
   font-weight: 900;
   font-size: 32px;
-  align-self: center;
+  justify-content: center;
   margin-left: 8px;
 }
 
