--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -15,7 +15,10 @@ body {
   justify-content: center;
 
 }
-
+.cards{
+  display: flex;
+  flex-direction: column;
+ }
 .column{
   display: flex;
   
@@ -31,7 +34,7 @@ body {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
-  flex:1;
+  
 }
 
 .card {
