--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -19,6 +19,12 @@ body {
   display: flex;
   flex-direction: column;
  }
+
+ .half
+ .full{
+  display:flex;
+  flex-direction: row;
+ }
 .column{
   display: flex;
   
