--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -17,7 +17,7 @@ body {
 }
 .cards{
   display: flex;
-  flex: 1;
+  justify-content: space-evenly;
  }
 
  .half
@@ -50,4 +50,5 @@ body {
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
   display: flex;
+  
 }
