--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -13,7 +13,8 @@ body {
   font-weight: 900;
   font-size: 32px;
   display: flex;
-  justify-content: center;
+  align-items: center;
+  padding-left: 16px;
 
 }
 .cards{
