--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -22,15 +22,20 @@ body {
   flex-wrap: wrap;
   gap: 32px;
   padding: 16px;
-  flex-direction: row;
-
-  
  }
+
+ul{
+  list-style: none;
+}
+
+a{
+  text-decoration: none;
+  color: #eee;
+}
 
 .column{
   display: flex;
-  flex:1;
-  
+  flex:1; 
 }
 
 .footer {
